@@ -1,6 +1,8 @@
 Version 0.9.0~dev
 
 	* Drop Action._execute_worker in favor of Action._execute_current_worker.
+	* Call command callback even if there is no output data read from standard
+	  outputs, refs: #6583.
 
 Version 0.8.1 Released on 2013/01/16
 
